styles/style.css
.body {
  background-color: #fff;
  min-height: 100vh;
}

.header {
  position: relative;
  display: grid;
  grid-template-columns: 1fr minmax(0, 140px) 1fr;
  max-width: 1052px;
  width: 100%;
  height: 105px;
  margin-top: 92px;
  margin-bottom: 96px;
  margin-left: auto;
  margin-right: auto;
  padding-left: 26px;
  padding-right: 25px;
}

.header__menu {
  display: flex;
  align-items: center;
}

.header__links-list {
  display: flex;
  gap: 13px;
  list-style: none;
}

.header__links-list-item::before {
  content: "○";
  font-size: 14px;
  padding-left: 0;
  padding-right: 10px;
}

.header__links-list-item_no-bullit::before {
  content: "";
  display: none;
}

.header__links-list-item {
  font-size: 18px;
}

.header__link {
  cursor: pointer;
  text-decoration: underline;
  text-underline-offset: 4px;
}

.header__link--active {
  text-decoration: none;
}

.header__logo {
  display: flex;
  justify-content: center;
  height: 100%;
  width: 148px;
}

.header__logo_link {
  display: block;
  aspect-ratio: 148 / 105;
  width: 148px;
  height: 105px;
}

.header__logo_image {
  aspect-ratio: 148 / 105;
  width: 148px;
  height: 105px;
  object-fit: contain;
}

.header__address {
  place-self: end;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 240px;
  line-height: 24px;
  font-size: 18px;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hero {
  width: 100%;
  height: 757px;
  max-width: 1100px;
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/cover.jpg") center no-repeat;
  background-size: cover;
  overflow: hidden;
}

.hero__title {
  display: flex;
  flex-direction: column;
  color: #fff;
  font-weight: bold;
  font-size: 100px;
  align-self: center;
  margin-top: 165px;
  margin-left: 50px;
  margin-right: 50px;
  margin-bottom: 135px;
}

.hero__title_word {
  width: fit-content;
  letter-spacing: 30px;
}

.hero__title_word:nth-child(2) {
  align-self: center;
}

.hero__title_word:nth-child(3) {
  align-self: flex-end;
}

.hero__promo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 78px;
  padding-right: 50px;
}

.hero__promo_text {
  font-size: 22px;
  font-weight: normal;
  color: #fff;
  line-height: 28px;
  text-transform: uppercase;
  word-spacing: 90%;
  white-space-collapse: collapse;
}

.hero__promo_btn {
  padding-left: 31px;
  padding-top: 12px;
  padding-right: 32px;
  padding-bottom: 11px;
  background-color: transparent;
  color: #fff;
  border-style: solid;
  border-color: #fff;
  border-radius: 0;
  border-width: 1px;
  text-transform: uppercase;
  font-size: 22px;
}

.lots {
  margin-top: 179px;
  max-width: 1052px;
  width: 100%;
}

.lots__title {
  margin-left: 40px;
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
}

.lots__cards {
  margin-top: 27px;
  display: grid;
  grid-template-rows: 563px;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 25px;
}

.lots__card {
  padding-top: 51px;
  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 48px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.lots__card--films {
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/card-lot-01.jpg") no-repeat center;
  background-size: cover;
}

.lots__card--book {
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/card-lot-02.jpg") no-repeat center;
  background-size: cover;
}

.lots__card--painting {
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/card-lot-03.jpg") no-repeat center;
  background-size: cover;
}

.lots__card_title {
  font-size: 22px;
  font-weight: bold;
  line-height: 120%;
  text-transform: uppercase;
  color: #fff;
  text-decoration: underline;
  text-underline-offset: 2px;
}

.lots__card_description {
  font-size: 20px;
  font-weight: normal;
  color: #fff;
}

.lots__see-more {
  display: inline-block;
  font-size: 20px;
  font-weight: normal;
  color: #000;
  text-transform: lowercase;
  text-decoration: underline;
  text-underline-offset: 2px;
  cursor: pointer;
  margin-top: 30px;
  margin-left: 40px;
}

.about {
  display: flex;
  justify-content: space-between;
  margin-top: 146px;
  max-width: 1052px;
  width: 100%;
  gap: 72px;
}

.about__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 47px;
  margin-top: 35px;
  width: 240px;
  height: 240px;
  min-width: 240px;
  min-height: 240px;
  background-color: #000;
  border-radius: 100%;
  border-style: none;
}

.about__logo_img {
  width: 148px;
  height: 114px;
}

.about__description {
  display: flex;
  flex-direction: column;
  margin-top: 133px;
  gap: 100px;
}

.about__description_title {
  font-size: 40px;
  font-weight: bold;
  text-transform: uppercase;
  color: #000;
}

.about__description_text {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.about__description_text_item {
  font-size: 20px;
  font-weight: normal;
  line-height: 24px;
  color: #000;
}

.footer {
  display: flex;
  justify-content: space-between;
  margin-top: 180px;
  margin-bottom: 88px;
  max-width: 1000px;
  width: 100%;
}

.footer__link {
  text-decoration: underline;
  cursor: pointer;
  text-underline-offset: 4px;
}

.footer__link--active {
  text-decoration: none;
}

.footer__contacts {
  display: flex;
  flex-direction: column;
  font-style: normal;
  max-width: 240px;
  width: 100%;
  font-size: 18px;
  font-weight: normal;
  color: #000;
  line-height: 24px;
}

.footer__menu {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footer__socials {
  display: flex;
  gap: 48px;
}

.footer__social_link {
  text-decoration: none;
  cursor: pointer;
}

.footer__social_logo {
  width: 48px;
  height: 48px;
}

.tracking-0 {
  letter-spacing: 0;
}

.tracking-30 {
  letter-spacing: 0.3em;
}

.tracking-60 {
  letter-spacing: 0.6em;
}

.tracking-90 {
  letter-spacing: 0.9em;
}

.tracking-80 {
  letter-spacing: 0.8em;
}

.tracking-110 {
  letter-spacing: 1.1em;
}

